Fixed issue with gaps

--- a/homework4/classwork/styles-classwork.css
+++ b/homework4/classwork/styles-classwork.css
@@ -8,7 +8,7 @@
     gap: 5px;
 }
 
-.container > div {
+.item {
     background-color: #666;
 }
 
